--- a/src/app/components/monitoreo-almacen/monitoreo-almacen.component.html
+++ b/src/app/components/monitoreo-almacen/monitoreo-almacen.component.html
@@ -1,143 +1,315 @@
 <app-navbar></app-navbar>
- <div class="navega card-header">
-  <a class="leter nav-link"  href="#"><i class="fas fa-home-lg-alt "></i> Inicio > <i class="navs">Monitoreo de almacén</i></a> 
+
+<div class="navega card-header">
+  <a class="leter nav-link" href="#">
+    <i class="fas fa-home-lg-alt"></i>
+    Inicio >
+    <i class="navs">Monitoreo de almacén</i>
+  </a>
 </div>
 
-          <br>
-          <div class="table-responsive">
-            <table id="example" style="width:100%;" class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th >ID</th>
-                  <th >Solicitante</th>
-                  <th >Fecha Solicitud</th>
-                  <th >Para</th>
-                  <th >Motivo Salida</th>
-                  <th >Cantidad</th>
-                  <th >Unidad Medida</th>
-                  <th >Area</th>
-                  <th >Descripción</th>
-                  <th >Observaciones</th>
-                  <th >Autorizador</th>
-                  <th >Salida</th>
-                  <th >Provedor</th>
-                  <th >Comentarios</th>
-                  <th >Regreso</th>
-                  <th >Status</th>
-                  <th >FechaCompromiso</th>
-                  <th >opciones</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let item of datatable"  style="width: 100%;">
-                  <td>{{item.id_solicitud}}</td>
-                  <td>{{item.solicitante}}</td>
-                  <td>{{item.fechaSolicitud}}</td>
-                  <td>{{item.para}}</td>
-                  <td>{{item.motivo}}</td>
-                  <td>{{item.cantidad}}</td>
-                  <td>{{item.unidadMedida}}</td>
-                  <td>{{item.area}}</td>
-                  <td>{{item.descripcion}}</td>
-                  <td>{{item.observaciones}}</td>
-                  <td>{{item.autorizador}}</td>
-                  <td>{{item.fechaSalida}}</td>
-                  <td>{{item.nombreProvedor}}</td>
-                  <td>{{item.comentariosCompras}}</td>
-                  <td>{{item.fechaRegreso}}</td>
-                  <td>{{item.status2}}</td>
-                  <td>{{item.fechaCompromiso}}</td>
-                  <th>
-                    <!-- <button type="button" class="" (click)="onSetData(item); openModal(template)">Salida activo</button>
-                  <button type="button" class=" " (click)="onSetData(item); openModal1(template1)">Regreso activo</button>
-                   -->
-                  <button  (click)="onSetData(item); openModal(template)" class="textS" >salida</button> <button (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" >regreso</button>
+<br />
+<div class="table-responsive">
+  <table
+    id="example"
+    style="width: 100%;"
+    class="table table-striped table-bordered"
+  >
+    <thead>
+      <tr class="table-info">
+        <th>ID</th>
+        <th>Solicitante</th>
+        <th>Área</th>
+        <th>Fecha Solicitud</th>
+        <th>Motivo Salida</th>
+        <th>Descripción</th>
+        <th>Observaciones</th>
+        <th>Proveedor</th>
+        <th>Tipo de ticket</th>
+        <th>¿El artículo regresa?</th>
+        <th>Autorizador</th>
+        <th>Estatus de aprobación</th>
+        <!--<th>Comentarios autirizador</th>-->
+        <th>Fecha de salida</th>
+        <th>Fecha de Regreso</th>
+        <th>Comentarios Almacén</th>
+        <th>Fecha compromiso</th>
+        <th>Status</th>
+        <th>Comentarios compras</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of datatable" style="width: 100%;">
+        <td>{{ item.id_solicitud }}</td>
+        <td>{{ item.solicitante }}</td>
+        <td>{{ item.area }}</td>
+        <td>{{ item.fechaSolicitud }}</td>
+        <td>{{ item.motivo }}</td>
+        <td>{{ item.descripcion }}</td>
+        <td>{{ item.observaciones }}</td>
+        <td>{{ item.provedor }}</td>
+        <td>{{ item.tipoTicket }}</td>
+        <td>{{ item.regresa }}</td>
+        <td>{{ item.autorizador }}</td>
+        <td>{{ item.statusAprobacion }}</td>
+        <td>{{ item.fechaSalida }}</td>
+        <td>{{ item.fechaRegreso }}</td>
+        <td>{{ item.comentariosRegreso }}</td>
+        <td>{{ item.fechaCompromiso }}</td>
+        <div *ngIf="item.status2=== 'En reparación con'; then si; else no"></div>
+        <ng-template #si><td>{{ item.status2 }}:{{item.proveedor }}</td></ng-template>
+        <ng-template #no><td>{{ item.status2 }}</td></ng-template>
+        
+        <td>{{ item.comentariosCompras }}</td>
+        <div *ngIf="item.statusAprobacion === ''; then sisi; else sino"></div>
+        <ng-template #sisi>
+          <td>
+           
+            <button
+            disabled
+              (click)="onSetData(item); openModal(template)"
+              class="textS"
+              
+            >
+              salida
+            </button>
+            <button (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" disabled>
+              regreso
+            </button>
+          </td>
+        </ng-template>
+        
+        <ng-template #sino>
+       
+          <div *ngIf="item.status2==='Autorizado'; then siva; else nova"></div>
+          <ng-template #siva>
+            <td>
+           
+              <button
+              
+                (click)="onSetData(item); openModal(template)"
+                class="textS"
+                
+              >
+                salida
+              </button>
+              <button (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" disabled>
+                regreso
+              </button>
+            </td>
+          </ng-template>
+            <ng-template #nova>
+              <div *ngIf="item.status2==='En reparación con'; then sir; else nor"></div>
+              <ng-template #sir>
+                <div *ngIf="item.validarSalida==='true'; then sir1; else nor1"></div>
+                <ng-template #sir1>
+                  <td>
+           
+                    <button
+                    disabled
+                      (click)="onSetData(item); openModal(template)"
+                      class="textS"
+                      
+                    >
+                      salida
+                    </button>
+                    <button (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" >
+                      regreso
+                    </button>
+                  </td>
 
-                  </th>
-                  </tr>
-              </tbody>
-            </table>
-          </div>
-      
+                </ng-template>
+              <ng-template #nor1>
+                <td>
+           
+                  <button
+                  disabled
+                    (click)="onSetData(item); openModal(template)"
+                    class="textS"
+                    
+                  >
+                    salida
+                  </button>
+                  <button disabled (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" >
+                    regreso
+                  </button>
+                </td>
+              </ng-template>
+              </ng-template>
+              <ng-template #nor>
+                <div *ngIf="item.status2==='Recibido en almacén'; then sire"></div>
+                <ng-template #sire>
+                  <td>
+           
+                    <button
+                    disabled
+                      (click)="onSetData(item); openModal(template)"
+                      class="textS"
+                      
+                    >
+                      salida
+                    </button>
+                    <button disabled (click)="onSetDataRegreso(item); openModal1(template1)" class="textR" >
+                      regreso
+                    </button>
+                  </td>
+                </ng-template>
+              </ng-template>
+            </ng-template>
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <!--modales-->
+<!--modal para  salida de activo-->
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Salida de activo</h4>
-    <button type="button" class="close pull-rigth" aria-label="Close" (click)="bsModalRef.hide()"> <span aria-hidden="true">&times;</span>
+    <button
+      type="button"
+      class="close pull-rigth"
+      aria-label="Close"
+      (click)="bsModalRef.hide()"
+    >
+      <span aria-hidden="true">&times;</span>
     </button>
   </div>
-   <!--inicio-->
-   <div class="row-6 mt-5">
-
-      
-
+  <!--inicio-->
+  <div class="row-6 mt-5">
     <div class="input-group mb-3 input-group-lg">
       <span class="input-group-text" id="basic-addon1">Núm. solicitud:</span>
-      <input type="text" class="form-control" placeholder="id" aria-label="Username" aria-describedby="basic-addon1" name="id" id="txtid"  [(ngModel)]="solicitud.id_solicitud" disabled="disabled">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="id"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="id"
+        id="txtid"
+        [(ngModel)]="solicitud.id_solicitud"
+        disabled="disabled"
+      />
     </div>
-  
 
     <div class="input-group mb-3 input-group-lg">
       <span class="input-group-text" id="basic-addon1">Fecha de salida:</span>
-      <input type="date" class="form-control" placeholder="Fecha de salida" aria-label="Username" aria-describedby="basic-addon1" name="FechaSolicitud" id="txtFechaSalida"  [(ngModel)]="solicitud.fechaSalida">
-    </div>
-    
-    <div class="input-group mb-3 input-group-lg">
-      <span class="input-group-text" id="basic-addon1">Fecha compromiso:</span>
-      <input type="date" class="form-control" placeholder="Fecha de salida" aria-label="Username" aria-describedby="basic-addon1" name="FechaCompromiso" id="txtfechaCompromiso"  [(ngModel)]="solicitud.fechaCompromiso">
+      <input
+        type="date"
+        class="form-control"
+        placeholder="Fecha de salida"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="FechaSolicitud"
+        id="txtFechaSalida"
+        [(ngModel)]="solicitud.fechaSalida"
+      />
     </div>
 
     <div class="input-group mb-3 input-group-lg">
-      <span class="input-group-text" id="basic-addon1">Nombre del Proveedor:</span>
-      <input type="text" class="form-control" placeholder="Nombre del proveedor" aria-label="Username" aria-describedby="basic-addon1" name="NombreProvedor" id="txt"  [(ngModel)]="solicitud.nombreProvedor">
+      <span class="input-group-text" id="basic-addon1">
+        Nombre del Proveedor:
+      </span>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Nombre del proveedor"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="NombreProvedor"
+        id="txt"
+        [(ngModel)]="solicitud.nombreProvedor"
+      />
     </div>
-
-    
-
   </div>
- 
+
   <div class="d-grid gap-2">
-    <button type="button" class="btn btn-primary" (click)="saveSomeThing(); onUpdateSalida(solicitud)"> Guardar Cambios </button>
+    <button
+      type="button"
+      class="btn btn-primary"
+      (click)="saveSomeThing(); onUpdateSalida(solicitud)"
+    >
+      Guardar Cambios
+    </button>
   </div>
-<!--fin-->
+  <!--fin-->
 </ng-template>
+<!--modal para  salida de activo-->
 
+<!--modal para  regreso de activo-->
 <ng-template #template1>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Regreso de activo</h4>
-    <button type="button" class="close pull-rigth" aria-label="Close" (click)="bsModalRef.hide()"> <span aria-hidden="true">&times;</span>
+    <button
+      type="button"
+      class="close pull-rigth"
+      aria-label="Close"
+      (click)="bsModalRef.hide()"
+    >
+      <span aria-hidden="true">&times;</span>
     </button>
   </div>
-   <!--inicio-->
-   <div class="row-6 mt-5">
-
+  <!--inicio-->
+  <div class="row-6 mt-5">
     <div class="input-group mb-3 input-group-lg">
       <span class="input-group-text" id="basic-addon1">Núm. solicitud:</span>
-      <input type="text" class="form-control" placeholder="id" aria-label="Username" aria-describedby="basic-addon1" name="id" id="txtid"  [(ngModel)]="solicitud.id_solicitud" disabled="disabled">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="id"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="id"
+        id="txtid"
+        [(ngModel)]="solicitud.id_solicitud"
+        disabled="disabled"
+      />
     </div>
-  
+
     <div class="input-group mb-3 input-group-lg">
       <span class="input-group-text" id="basic-addon1">Fecha de Regreso:</span>
-      <input type="date" class="form-control" placeholder="Fecha de salida" aria-label="Username" aria-describedby="basic-addon1" name="FechaSolicitud" id="txtFechaSalida"  [(ngModel)]="solicitud.fechaRegreso">
+      <input
+        type="date"
+        class="form-control"
+        placeholder="Fecha de salida"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="FechaSolicitud"
+        id="txtFechaSalida"
+        [(ngModel)]="solicitud.fechaRegreso"
+      />
     </div>
 
-    <div class=" input-group-lg">
-      <br>
-      
-      <span>Comentarios: </span>
-      <textarea type="text" class="form-control" placeholder="Comentarios" aria-label="Username" aria-describedby="basic-addon1" name="id" id="txtFS"  [(ngModel)]="solicitud.comentariosRegreso"></textarea>
+    <div class="input-group-lg">
+      <br />
+
+      <span>Comentarios:</span>
+      <textarea
+        type="text"
+        class="form-control"
+        placeholder="Comentarios"
+        aria-label="Username"
+        aria-describedby="basic-addon1"
+        name="id"
+        id="txtFS"
+        [(ngModel)]="solicitud.comentariosRegreso"
+      ></textarea>
     </div>
-    <br>
-
-    
-
-  </div> 
-  <div class="d-grid gap-2">
-    <button type="button" class="btn btn-primary" (click)="saveSomeThing();onUpdateActivoR(solicitud)"> Guardar Cambios </button>
+    <br />
   </div>
- <!--fin-->
+  <div class="d-grid gap-2">
+    <button
+      type="button"
+      class="btn btn-primary"
+      (click)="saveSomeThing(); onUpdateActivoR(solicitud)"
+    >
+      Guardar Cambios
+    </button>
+  </div>
+  <!--fin-->
 </ng-template>
 <!--fin modales-->
-  
 
+<!--modal para  regreso de activo-->
