--- a/src/app/components/vigilancia/vigilancia.component.html
+++ b/src/app/components/vigilancia/vigilancia.component.html
@@ -1,36 +1,89 @@
-<app-navbar></app-navbar>
- <div class="navega card-header">
-  <a class="leter nav-link"  href="#"><i class="fas fa-home-lg-alt "></i> Inicio > <i class="navs">Monitoreo de Vigilancia</i></a> 
+<div class="navega card-header">
+  <a class="leter nav-link" href="#">
+    <i class="fas fa-home-lg-alt"></i>
+    Inicio >
+    <i class="navs">Monitoreo de Vigilancia</i>
+  </a>
 </div>
 
-          <br>
-          <div class="table-responsive">
-            <table id="example" style="width:100%; height:100%;" class="table table-striped table-bordered">
-              <thead>
-                <tr  >
-                  <th>Solicitante</th>
-                  <th>Provedor</th>
-                  <th>Nombre Provedor</th>
-                  <th>Motivo Salida</th>
-                  <th>Cantidad</th>
-                  <th>Descripción</th>
-                  <th>Autorizador</th>
-                  <th>Salida</th>
-                </tr>
-              </thead>
-            <tbody>
-              <tr *ngFor="let item of datatable"   style="width: 100%;">
-                <td>{{item.solicitante}}</td>
-                <td>{{item.para}}</td>
-                <td>{{item.nombreProvedor}}</td>
-                <td>{{item.motivo}}</td>
-                <td>{{item.cantidad}}</td>
-                <td>{{item.descripcion}}</td>
-                <td>{{item.autorizador}}</td>
-                <td>{{item.fechaSalida}}</td>
-              </tr>
-            </tbody>
-            </table>
-          </div>
-      
-  
+<br />
+<div class="table-responsive">
+  <table
+    id="example"
+    style="width: 100%; height: 100%;"
+    class="table table-striped table-bordered"
+  >
+    <thead>
+      <tr>
+        <th>Núm solicitud</th>
+        <th>Solicitante</th>
+        <th>Provedor</th>
+        <th>Nombre Provedor</th>
+        <th>Motivo Salida</th>
+        <th>Descripción</th>
+        <th>Autorizador</th>
+        <th>Salida</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of datatable" style="width: 100%;">
+        <td>{{ item.id_solicitud }}</td>
+        <td>{{ item.solicitante }}</td>
+        <td>{{ item.para }}</td>
+        <td>{{ item.nombreProvedor }}</td>
+        <td>{{ item.motivo }}</td>
+        <td>{{ item.descripcion }}</td>
+        <td>{{ item.autorizador }}</td>
+        <td>{{ item.fechaSalida }}</td>
+        <div
+          *ngIf="item.validarSalida !== ''; then thenBlock; else elseBlock"
+        ></div>
+        <ng-template #thenBlock>
+          <td>
+            <button
+              type="bu"
+              class="btn btn-primary"
+              (click)="onSetData1(item); onUpdateSalida(solicitud)"
+              disabled
+            >
+              Marcar salida
+            </button>
+          </td>
+        </ng-template>
+        <ng-template #elseBlock>
+          <div
+          *ngIf="item.status2 === 'En reparación con'; then sale else nosale"
+        ></div>
+         <ng-template #sale>
+          <td>
+            <button
+            
+              type="bu"
+              class="btn btn-primary"
+              (click)="onSetData1(item); onUpdateSalida(solicitud)"
+              
+            >
+              Marcar salida
+            </button>
+          </td>
+         </ng-template>
+         <ng-template #nosale>
+          <td>
+            <button
+            disabled
+              type="bu"
+              class="btn btn-primary"
+              (click)="onSetData1(item); onUpdateSalida(solicitud)"
+              
+            >
+              Marcar salida
+            </button>
+          </td>
+         </ng-template>
+          
+        </ng-template>
+      </tr>
+    </tbody>
+  </table>
+</div>
